fix text wrapping

--- a/css/main.css
+++ b/css/main.css
@@ -1274,7 +1274,6 @@ img {
 .about__info > ul > li > p {
   padding: 15px 0 0 64px;
   font-size: 16px;
-  width: 120%;
 }
 .about__info > ul > li > ul {
   margin: 25px 0 0 32px;
